// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component should render 1`] = `
<DocumentFragment>
  <div
    class="message message--info"
    role="status"
  >
    <section
      class="message__content"
    >
      <test-file-stub
        height="1.125em"
        width="1.125em"
      />
      <small>
        <div>
          Some content
        </div>
      </small>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Message component should render with a different level 1`] = `
<DocumentFragment>
  <div
    class="message message--failure"
    role="status"
  >
    <section
      class="message__content"
    >
      <test-file-stub
        height="1.125em"
        width="1.125em"
      />
      <small>
        <div>
          Some content
        </div>
      </small>
    </section>
  </div>
</DocumentFragment>
`;
